#1309 Fix tree view alignement as the buttons are a little bigger.
git-svn-id: svn://svn.opentaps.org/opentaps_all/versions/1.4/trunk@14394 d3523486-f5fe-0310-a41a-a15a4e76f3c7

--- a/hot-deploy/opentaps-common/webapp/css/treeView.css
+++ b/hot-deploy/opentaps-common/webapp/css/treeView.css
@@ -7,8 +7,10 @@
     clear:both;
     display:inline;
     float:left;
-    height:18px;
+    height:26px;
     width:18px;
+    background-position:center center;
+    background-repeat:no-repeat;
 }
 
 .TreeExpandoOpened {
@@ -27,10 +29,12 @@
 .TreeContent {
     cursor:default;
     margin-left:18px;
-    min-height:18px;
+    min-height:26px;
     min-width:18px;
     padding-left:1px;
     padding-top:3px;
+    height:26px;
+    line-height:22px;
 }
 
 .TreeNode {
@@ -59,6 +63,7 @@
 
 div.TreeIcon {
     border-bottom:1px solid #ddd;
+    padding-right:5px;
 }
 
 div.TreeIcon:hover {
